<resources>
    <string name="app_name">P.I.K.A.M.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">APTEKA P.I.K.A.M.</string>
    <string name="nav_header_subtitle">Szybki i wygodny sposób na zdobycie niezbędnych leków.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="todo">TODO</string>
    <string name="home_page">Strona Główna</string>
    <string name="komunikacja">Komunikacja</string>
    <string name="share">Udostępnij</string>
    <string name="send">Wyslij</string>
    <string name="title_activity_pojedynczy_lek">PojedynczyLekActivity</string>
    <string name="MySearch">Szukaj</string>
    <string name="title_activity_search_list_results">SearchListResults</string>
    <string name="leki">Leki</string>
    <string name="login">Zaloguj</string>
    <string name="title_activity_lista">Lista</string>
    <string name="tylko_dostepne">Tylko Dostępne</string>
    <string name="title_activity_login">Podaj dane logowania: </string>
    <string name="prompt_email">Login</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_sign_in">Zaloguj</string>
    <string name="error_invalid_password">Hasło jest za krótkie</string>
    <string name="error_incorrect_password">Hasło jest niepoprawne</string>
    <string name="error_field_required">To pole jest wymagane</string>
    <string name="title_activity_klient_mode">KlientMode</string>
    <string name="title_activity_aptekarz_mode">AptekarzMode</string>
    <string name="logout">Wyloguj</string>
    <string name="skoszyk">Koszyk</string>
    <string name="title_activity_rejestracja">Rejestracja</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Address Email jest popoprawny</string>
    <string name="rejestracja">Rejestracja</string>
    <string name="obligatory">*</string>
    <string name="email">Email</string>
    <string name="repet_pass">Powtórz hasło</string>
    <string name="imie">Imię</string>
    <string name="nazwisko">Nazwisko</string>
    <string name="adress">Adres</string>
    <string name="kod_pocztowy">Kod Pocztowy</string>
    <string name="miasto">Miasto</string>
    <string name="obligatory_twice">**</string>
    <string name="numer_telefonu">Numer telefonu</string>
    <string name="data_urodzenia">Data Urodzenia</string>
    <string name="unikalny_kod_aptekarza">Unikalny kod aptekarza</string>
    <string name="status_zamowienia">Status zamówienia:</string>
    <string name="data_zamowienia">Data zamówienia:</string>
    <string name="nr">Nr.</string>
    <string name="zdjecie">Zdjęcie</string>
    <string name="nazwa">Nazwa</string>
    <string name="ilosc">Ilość</string>
    <string name="cena_za_sztuke">Cena za sztukę</string>
    <string name="na_recepte">Na receptę</string>
    <string name="cena_razem">Cena razem</string>
    <string name="t">T</string>
    <string name="razem">Razem:</string>
    <string name="historia_zamowien">Historia zamówień</string>
    <string name="haslo">Haslo:</string>
    <string name="zmien">Zmień</string>
    <string name="moje_konto">Moje Konto</string>
    <string name="klienci">Klienci</string>
    <string name="oczekujace_zamowienia">Oczekujące Zamówienia</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="lista_klientow">Lista klientów</string>
    <string name="checkbox">projekt_zespolowy.pikam.checkbox</string>
    <string name="name">com.projekt_zespolowy.pikam.login</string>
    <string name="password">com.projekt_zespolowy.pikam.password</string>
</resources>
